Styles/Portico: Fixed Input form alignment This PR solves the alignemnt of text in input form,it was set to right,which should be left. Fixes:#20828

--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -1007,7 +1007,7 @@ button#register_auth_button_gitlab {
 
 .goto-account-page {
     #realm_redirect_subdomain {
-        text-align: right;
+        text-align: left;
         position: relative;
         padding-right: 10px;
     }
